--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -24,7 +24,15 @@
               </div>
               <article>
                 <p>
-                    
+                    Cuadro ASTRA aluminio 6061 "triple butted". Rodado 29.
+                    Horquilla de suspension Rock Shox Recon Silver RL con OneLoc (bloqueo remoto) taper Boost. 100 mm
+                    Shimano SLX 12V (1x12).
+                    Palancas Shimano Deore MT510, 2-PCS.
+                    Frenos a disco hidraulico Shimano MT501.
+                    Componentes Zenith Al Comp.
+                    Ruedas Mavic Crossmax.
+                    Neumaticos Maxxis Ikon 29x2.20.
+
                 </p>
               </article>
               <div >
@@ -36,7 +44,7 @@
             <img src="img/Z_Astra_1.png" alt="MTB Z1" class="img_slice">
             <img src="img/Z_Astra_2.png" alt="MTB Z2" class="img_slice" >
         </div>
-        <div>
+        <div class="divBotones">
             <button type="submit">
                 AGREGAR 
             </button>
