--- a/public/css/stylesProductDetail.css
+++ b/public/css/stylesProductDetail.css
@@ -20,28 +20,70 @@ body{
         flex-direction: row ;
         background-color: white;
         margin-left: 200px ;
-        margin-right: 200px;
+        margin-right: 600px;
         margin-top: 40px;
         border-radius: 20px;
-        box-shadow: 10px 5px 5px ;
-
+        color:black
+       
 }
 .img_view_datail{
     margin-left: 20px;
     width: 60%;
     
 }
+.box article {
+    padding: 10px;
+    text-align: justify;
+
+}
 .img_slice{
 max-width: 100px;
 max-height: 70px;
 padding: 10px;
+border-radius: 15px;
 }
 .box_select {
+   /* display: flex;
+    flex-direction: row ;*/
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: row ;
+    background-color: white;
+    margin-left: 200px ;
+    margin-right: 200px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 20px;
+  
+}
+.divBotones{
+    display: flex;
     display: flex;
     flex-direction: row ;
     align-items: center;
     justify-content: center;
-  
+
+
+}
+button{
+    border-radius: 25px;
+    padding: 10px;
+    text-align: center;
+    background-color: black;
+    color: white;
     
+}
+.divDescription{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: row ;
+    background-color: rgb(125, 121, 121);
+    margin-left: 10px ;
+    margin-right: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 20px;
 
 }
