--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,9 +4,8 @@
     <%- include('./partials/head') %>  
 </head>
 <body>
-    <header>
-        <%- include('./partials/header') %>
-    </header>
+    
+    <%- include('./partials/navBar') %>  
     <main>
        
     </main>
