--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
    
-    <%- include('./partials/headL&R') %>  
+    <%- include('./partials/head') %>  
+  
 </head>
 <body>
+    <%- include('./partials/navBar') %>  
    
         <main>
             <form action="login.ejs" method="POST" class="form-box animate fadeInUp">
