--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -5,6 +5,7 @@
     <%- include('./partials/headL&R') %>  
 </head>
 <body>
+    <%- include('./partials/navBar') %>  
 
 <main class="form-box">
 <form action="/" method="POST">
