--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,7 +8,7 @@
     <%- include('./partials/navBar') %>  
     <main>
         <figure class="logo">
-            <img src="/img/logo.png" alt="Logo">
+            <img src="/img/fondo.png" alt="fondo">
           </figure>  
     </main>
     <footer>
