--- a/src/views/partials/navBar.ejs
+++ b/src/views/partials/navBar.ejs
@@ -1,11 +1,13 @@
 <header> 
     <div class="nav-bar-login">
-        
+        <figure class="logo">
+            <img src="/img/logo.png" alt="logo">
+          </figure>        
         <nav >
             <ul class="enlaces" >
-                <li><a href="/register">Register<i class="fa-solid fa-user"></i></a></li>
-                <li><a href="/login">Login<i class="fa-solid fa-user"></i></a></li>
-                <li><a href="/carro">Basket<i class="fa-solid fa-cart-shopping"> </i> </a> </li>
+                <li><a href="/users/register">Register<i class="fa-solid fa-user"></i></a></li>
+                <li><a href="/users/login">Login<i class="fa-solid fa-user"></i></a></li>
+                <li><a href="/users/carro">Basket<i class="fa-solid fa-cart-shopping"> </i> </a> </li>
             </ul>
         </nav>
     </div>
