--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel='stylesheet' href='/css/style.css' /> 
     <%- include('./partials/head') %>  
 </head>
 <body>
     
     <%- include('./partials/navBar') %>  
     <main>
-        <figure class="logo">
+        <figure class="fondo">
             <img src="/img/fondo.png" alt="fondo">
           </figure>  
     </main>
