--- a/src/views/partials/navBar.ejs
+++ b/src/views/partials/navBar.ejs
@@ -1,27 +1,20 @@
-<header> 
-    <div class="nav-bar-login">
-        <figure class="logo">
-            <img src="/img/logo.png" alt="logo">
-          </figure>        
+<header>
+     
+    
+                
         <nav >
+            <div class="nav-bar-login">
+            <figure class="nav-bar-login">
+            <img src="/img/logo.png" alt="logo">
+            </figure>
             <ul class="enlaces" >
+                <li><a href="/products">Productos</a> </li>
                 <li><a href="/users/register">Register<i class="fa-solid fa-user"></i></a></li>
                 <li><a href="/users/login">Login<i class="fa-solid fa-user"></i></a></li>
-                <li><a href="/users/carro">Basket<i class="fa-solid fa-cart-shopping"> </i> </a> </li>
+                <li><a href="/shopping/2">Basket<i class="fa-solid fa-cart-shopping"> </i> </a> </li>
+
             </ul>
         </nav>
     </div>
-    <div class="nav-bar-menu" >
-        <nav>
-            <ul class="enlaces">
-                <li><a href="/mtb">MTB BIKES</a></li>
-                <li><a href="/road">ROAD BIKES</a></li>
-                <li><a href="/track">TRACK BIKES</a></li>
-                <li><a href="/city">CITY BIKES</a></li>
-                <li><a href="/kids">KIDS BIKES</a></li>
-                <li><a href="/productDetail">DP</a></li>
-            </ul>
-        </nav>
-    </div>
-   
+
 </header>
