--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agregar producto</title>
-    <%# <link rel='stylesheet' href='/css/style.css' /> #%>
+    <link rel='stylesheet' href='/css/style.css' /> 
     <%- include('./partials/head') %>
 
 </head>
@@ -13,7 +13,7 @@
 <body>
     <%- include('./partials/navBar') %>
     <h1>Editar producto</h1>
-    <form action="/products/edit/<%=products.id%>" method="POST"> <%#revisar  enctype="multipart/form-data" #%>
+    <form action="/products/edit/<%=products.id%>" method="POST"> 
         <div>
             <label for="">Nombre</label>
             <input type="text" name="name" value="<%= products.name %> ">
@@ -26,7 +26,9 @@
             <label for="">Precio</label>
             <input type="text" name="price" value="<%= products.price %>">
         </div>
-        <%# agregar imagen %>
+        <p>
+            <input type="file" name="image">
+        </p>
 
         <label for="colors">Colores </label>
         <select name="colors">
